--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
